--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "serve": "node server/entry.express",
+    "serve-dev": "CORS_ENABLED=yes node server/entry.express",
     "start": "npm run dev",
     "typecheck": "tsc --incremental --noEmit"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.0.107",
+    "@types/cors": "^2.8.12",
     "@types/eslint": "8.4.6",
     "@types/express": "4.17.13",
     "@types/node": "latest",
@@ -28,6 +30,7 @@
     "express": "4.17.3",
     "node-fetch": "3.2.10",
     "prettier": "2.7.1",
+    "sass": "^1.54.7",
     "typescript": "4.7.4",
     "vite": "3.0.9"
   },
@@ -39,6 +42,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "css-resetter": "^1.2.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "googleapis": "^107.0.0"
   }
 }
